--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@types/jquery": "^3.3.29",
     "bootstrap": "^4.3.1",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
+    "express": "~4.16.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "querystring": "~0.2.0",
+    "request": "~2.83.0",
     "rxjs": "~6.5.2",
     "spotify-web-api-node": "^4.0.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "cookie-parser": "1.3.2",
-    "express": "~4.16.0",
-    "cors": "^2.8.4",
-    "querystring": "~0.2.0",
-    "request": "~2.83.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
